fix: inputs personalizados y fix de overflow en nombres

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,9 @@ label {
 }
 
 .input {
+  max-width: 100%;
+  max-height: 250px;
+  box-sizing: border-box;
   margin-top: 7px;
   border: 1px solid hsl(186, 15%, 59%);
   border-radius: 8px;
@@ -112,28 +115,78 @@ label {
 
 .Name-section {
   display: flex;
-  gap: 25px;
+  gap: 22px;
   flex-direction: row;
-  justify-content: center;
-  box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 750px) {
   .Name-section {
     flex-direction: column;
-    padding-inline: 0;
+    gap: 12px;
+    justify-content: space-between;
   }
 }
 
 #f-name,
 #l-name {
-  width: 225px;
+  width: 100%;
   box-sizing: border-box;
 }
 
 #general,
 #Support {
-  font-weight: 540;
+  margin-top: 15px;
   box-sizing: border-box;
   width: 100%;
+  cursor: pointer;
+  color: hsl(187, 24%, 22%);
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  border: 2px solid gray;
+  border-radius: 4px;
+  background-color: transparent;
+  margin-right: 8px;
+  transition: background-color 0.2s ease, border 0.2s ease;
+  cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+  background-color: #0f766e;
+  border-color: #0f766e;
+}
+
+input[type="radio"] {
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border: 2px solid #ccc;
+  border-radius: 50%;
+  background-color: white;
+  margin-right: 8px;
+  transition: background-color 0.2s ease, border 0.2s ease;
+}
+
+input[type="radio"]:checked {
+  background-color: #0f766e;
+  border-color: #0f766e;
+}
+
+#message{
+  min-height: 100px;
+}
+
+.success-img{
+  display: none;
+}
+
+#consent {
+  width: 17px;
+  height: 17px;
+}
+
+#msg-consent {
+  margin-top: 5px;
 }
